--- a/community/src/main/resources/application-local.yaml
+++ b/community/src/main/resources/application-local.yaml
@@ -5,6 +5,15 @@ spring:
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+
 #  data:
 #    redis:
 #      host: localhost
