--- a/community/src/main/resources/application-prod.yaml
+++ b/community/src/main/resources/application-prod.yaml
@@ -1,9 +1,19 @@
 spring:
   datasource:
-    url: jdbc:mysql://mysql2:3307/tubeplus
+    url: jdbc:mysql://mysql2:3306/tubeplus
     username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://eurekaimage:8761/eureka/
+  instance:
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+
 #    master:
 #      hikari:
 #        jdbc-url: jdbc:mysql://34.64.70.212:3307/ssgpoint
