--- a/community/build.gradle
+++ b/community/build.gradle
@@ -43,6 +43,8 @@ dependencies {
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+	implementation 'org.springframework.boot:spring-boot-starter-webflux:3.1.2'
+
 	sourceSets {
 		main {
 			java {
