--- a/community/src/main/resources/application.yaml
+++ b/community/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 0
+  port: 8001
   shutdown: graceful
 
 management:
@@ -19,7 +19,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
