--- a/community/build.gradle
+++ b/community/build.gradle
@@ -36,6 +36,8 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
+	// redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	// Spring for Apache Kafka 의존성
 	implementation 'org.springframework.kafka:spring-kafka'
 	// query dsl
