--- a/community/src/main/resources/application.yaml
+++ b/community/src/main/resources/application.yaml
@@ -13,7 +13,7 @@ management:
 
 spring:
   producers:
-    bootstrap-servers: plaintext://localhost:9092,plaintext://localhost:19093,plaintext://localhost:29094
+    bootstrap-servers: plaintext://localhost:9092
   profiles:
     active: local
   application:
