--- a/community/src/main/resources/application-local.yaml
+++ b/community/src/main/resources/application-local.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/tubeplus
+    url: jdbc:mysql://localhost:3307/tubeplus
     username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -9,14 +9,14 @@ spring:
 #      host: localhost
 #      port: 6379
 
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-  instance:
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+#eureka:
+#  client:
+#    register-with-eureka: true
+#    fetch-registry: true
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka/
+#  instance:
+#    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 #  data:
 #    redis:
