Feat kafka 알람 detail 추가로직 구현

--- a/community/src/main/resources/application.yaml
+++ b/community/src/main/resources/application.yaml
@@ -11,9 +11,20 @@ management:
     shutdown:
       enabled: true
 
+
 spring:
-  producers:
-    bootstrap-servers: plaintext://kafka1:9092,plaintext://kafka2:9092,plaintext://kafka3:9092
+  kafka:
+    consumer:
+      bootstrap-servers: plaintext://kafka1:9092,plaintext://kafka2:9092,plaintext://kafka3:9092
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    producer:
+      bootstrap-servers: plaintext://kafka1:9092,plaintext://kafka2:9092,plaintext://kafka3:9092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+    topic1:
+      name: "boardCreateAlarm"
   profiles:
     active: local
   application:
