Feat kafka 정산로직 추가

--- a/community/src/main/resources/application.yaml
+++ b/community/src/main/resources/application.yaml
@@ -25,6 +25,8 @@ spring:
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
     topic1:
       name: "boardCreateAlarm"
+    topic2:
+      name: "communityInteraction"
   profiles:
     active: local
   application:
