Feat kafka Creator Data Aggregation 로직 추가

--- a/community/src/main/resources/application.yaml
+++ b/community/src/main/resources/application.yaml
@@ -27,6 +27,8 @@ spring:
       name: "boardCreateAlarm"
     topic2:
       name: "communityInteraction"
+    topic3:
+      name: "creatorDataAggregationCommunity"
   profiles:
     active: local
   application:
