--- a/community/build.gradle
+++ b/community/build.gradle
@@ -66,6 +66,11 @@ dependencyManagement {
 	}
 }
 
+
+tasks.named('bootBuildImage') {
+	enabled = false
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
